# cairn

./: .gitignore  Cargo.toml  README.md  package.json
apps/site/: .gitignore  BUILD_NOTES.md  README.md  package.json
apps/site/content/docs/: architecture.mdx  index.mdx  meta.json  roadmap.mdx
crates/raft/: Cargo.toml  TRANSPORT_NOTES.md
crates/raft/src/: error.rs  hardstate.rs  lib.rs  lincheck.rs  log.rs  oplog.rs  rpc.rs  storage.rs  transport.rs  types.rs
crates/raft/src/core/: election.rs  membership.rs  mod.rs  read_index.rs  replication.rs  snapshot.rs
crates/raft/src/transport/: in_memory.rs  tcp.rs
crates/raft/src/transport/tcp/: codec.rs
crates/raft/tests/: log_model.rs  raft_sim.rs
crates/storage/: Cargo.toml
crates/storage/benches/: engine_bench.rs
crates/storage/src/: bloom.rs  engine.rs  lib.rs  memtable.rs  sstable.rs  types.rs  wal.rs
crates/storage/tests/: model.rs  recovery.rs
docs/: HANDOFF.md  NEXT-AGENT-KICKOFF.md
docs/superpowers/plans/: 2026-07-18-lsm-storage-engine.md  2026-07-18-raft-core-plan-c.md  2026-07-18-raft-log-store.md  2026-07-19-raft-plan-d-snapshots-membership.md
docs/superpowers/specs/: 2026-07-18-cairn-distributed-kv-design.md  2026-07-18-cairn-raft-design.md  2026-07-18-cairn-raftcore-plan-c-design.md  2026-07-19-cairn-plan-d-snapshots-membership.md
site/: BUILD_NOTES.md  next.config.ts  package.json
site/content/docs/: architecture.mdx  benchmarks.mdx  index.mdx
site/src/app/: globals.css  layout.config.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  sitemap.ts
site/src/lib/: site-config.ts
(+42 files in other folders)
