[package]
name = "cairn-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
crc32fast = "1"
serde = "1"
serde_derive = "1"
bincode = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
